syntax = "proto3";

option java_package = "com.santho.proto";
option java_outer_classname = "Order";

message ProductDetail{
    string prodId = 1;
    int32 quantity = 2;
}

message OrderDetail {
    string invoiceNumber = 1;
    ProductDetail product_details = 2;
    double price = 3;
    string orderBy = 4;
    string orderAt = 5;
    optional bool couponApplied = 6;
}

message AllOrders {
    repeated OrderDetail orders = 1;
}